--- a/src/app/capstone/capstone.component.html
+++ b/src/app/capstone/capstone.component.html
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-md-5">
     Project
-    </div>
-    <div class="col-md-7">
-      Project detail
-      </div>
-      </div>
+  </div>
+  <div class="col-md-7">
+    Project details
+  </div>
+</div>
