--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      
+
       <a class="navbar-brand" href="#">Capstone Portal </a>
     </div>
 
@@ -11,22 +11,26 @@
       <ul class="nav navbar-nav">
         <li><a href="#">Capstone Home</a></li>
         <li><a href="#">Capstone Projects</a></li>
-        
+
       </ul>
-      
+
       <ul class="nav navbar-nav navbar-right">
-      
+
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Contacts <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">User</a></li>
             <li><a href="#">Other</a></li>
-          
+
+
             <li role="separator" class="divider"></li>
             <li><a href="#">Log Out</a></li>
+            <!-- add stuff here-->
           </ul>
         </li>
       </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+    </div>
+    <!-- /.navbar-collapse -->
+  </div>
+  <!-- /.container-fluid -->
 </nav>
